force-app/main/default/objects/Campaign/fields/Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend__c</fullName>
    <formula>ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>