force-app/main/default/objects/Campaign/fields/Audience_Name__c.field-meta.xml
<CustomField>
    <fullName>Audience_Name__c</fullName>
    <label>Audience Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>