force-app/main/default/objects/Campaign/fields/Budget_Variance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance__c</fullName>
    <formula>BudgetedCost  /  ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>