force-app/main/default/objects/Campaign/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <label>Campaign Description</label>
    <type>TextArea</type>
</CustomField>