force-app/main/default/objects/Campaign/fields/Campaign_Objective__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Objective__c</fullName>
    <label>Campaign Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Aware</fullName>
            </value>
            <value>
                <fullName>Lead Gen</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>