force-app/main/default/objects/Campaign/fields/Campaign_ROI__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ROI__c</fullName>
    <label>Campaign ROI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>