force-app/main/default/objects/Campaign/fields/Campaign_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Sub_Type__c</fullName>
    <label>Campaign Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey &amp; NPS</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Company Communication</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>Reddit</fullName>
            </value>
            <value>
                <fullName>Discord</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Display Ad (ABM)</fullName>
            </value>
            <value>
                <fullName>Display Retarget (ABM)</fullName>
            </value>
            <value>
                <fullName>Linkedin Audiences (ABM)</fullName>
            </value>
            <value>
                <fullName>Global Targeting (ABM)</fullName>
            </value>
            <value>
                <fullName>Contextual Targeting (ABM)</fullName>
            </value>
            <value>
                <fullName>Customize Targeting (ABM)</fullName>
            </value>
            <value>
                <fullName>Small Conference (1-350)</fullName>
            </value>
            <value>
                <fullName>Medium Conference (351-550)</fullName>
            </value>
            <value>
                <fullName>Large Conference (551+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>