force-app/main/default/objects/Campaign/fields/CPC__c.field-meta.xml
<CustomField>
    <fullName>CPC__c</fullName>
    <label>CPC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>