force-app/main/default/objects/Campaign/fields/CTR__c.field-meta.xml
<CustomField>
    <fullName>CTR__c</fullName>
    <label>CTR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>