force-app/main/default/objects/Campaign/fields/Digital_Marketing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Cost__c</fullName>
    <label>Digital Marketing Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>