force-app/main/default/objects/Campaign/fields/Event_Booth_Cost__c.field-meta.xml
<CustomField>
    <fullName>Event_Booth_Cost__c</fullName>
    <label>Event Booth Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>