force-app/main/default/objects/Campaign/fields/Flights_Travel_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flights_Travel_Total_Cost__c</fullName>
    <label>Flights &amp; Travel Total Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>