force-app/main/default/objects/Campaign/fields/Food_and_Drink__c.field-meta.xml
<CustomField>
    <fullName>Food_and_Drink__c</fullName>
    <label>Food and Drink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>