force-app/main/default/objects/Campaign/fields/Lodging_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Cost__c</fullName>
    <label>Lodging Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>