force-app/main/default/objects/Campaign/fields/Marketing_Approach__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approach__c</fullName>
    <label>Marketing Approach</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>