force-app/main/default/objects/Campaign/fields/Number_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff__c</fullName>
    <label>Number of Staff</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>