force-app/main/default/objects/Campaign/fields/of_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_Calls__c</fullName>
    <label># of Calls</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>