force-app/main/default/objects/Campaign/fields/of_Emails__c.field-meta.xml
<CustomField>
    <fullName>of_Emails__c</fullName>
    <label># of Emails</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>