force-app/main/default/objects/Campaign/fields/of_Mailers_Sent__c.field-meta.xml
<CustomField>
    <fullName>of_Mailers_Sent__c</fullName>
    <label># of Mailers Sent</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>