force-app/main/default/objects/Campaign/fields/of_QR_Click_Responses__c.field-meta.xml
<CustomField>
    <fullName>of_QR_Click_Responses__c</fullName>
    <label># of QR Click Responses</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>