force-app/main/default/objects/Campaign/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
            <value>
                <fullName>Record Migrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>