force-app/main/default/objects/Campaign/fields/Retention_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Retention_in_Campaign__c</fullName>
    <label>Retention % in Campaign</label>
    <length>30</length>
    <type>Text</type>
</CustomField>