force-app/main/default/objects/Campaign/fields/Swag__c.field-meta.xml
<CustomField>
    <fullName>Swag__c</fullName>
    <label>Swag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>