force-app/main/default/objects/Campaign/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <label>Total Accounts</label>
    <length>6</length>
    <type>Text</type>
</CustomField>