force-app/main/default/objects/Campaign/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <formula>NumberOfLeads  +  NumberOfContacts</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Leads and Conacacts in Campaign</inlineHelpText>
    <label>Total Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>