force-app/main/default/objects/Campaign/fields/Value_Won_on_Opportunities_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Value_Won_on_Opportunities_in_Campaign__c</fullName>
    <label>Value Won-on Opportunities in Campaign</label>
    <length>30</length>
    <type>Text</type>
</CustomField>