force-app/main/default/objects/Campaign/fields/Won_Add_on_Opportunities_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Won_Add_on_Opportunities_in_Campaign__c</fullName>
    <label>Won Add-on Opportunities in Campaign</label>
    <length>30</length>
    <type>Text</type>
</CustomField>