force-app/main/default/objects/Campaign/recordTypes/ABM.recordType-meta.xml
<RecordType>
    <fullName>ABM</fullName>
    <active>true</active>
    <label>ABM</label>
</RecordType>