force-app/main/default/objects/Campaign/recordTypes/Content_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Content_Marketing</fullName>
    <active>true</active>
    <label>Content Marketing​</label>
</RecordType>