force-app/main/default/objects/Campaign/recordTypes/Customer_Success.recordType-meta.xml
<RecordType>
    <fullName>Customer_Success</fullName>
    <active>true</active>
    <label>Customer Marketing</label>
</RecordType>