force-app/main/default/objects/Campaign/recordTypes/Default_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Default_Campaign</fullName>
    <active>true</active>
    <label>Default Campaign</label>
</RecordType>