force-app/main/default/objects/Campaign/recordTypes/Digital_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Digital_Marketing</fullName>
    <active>true</active>
    <label>Digital Marketing</label>
</RecordType>