force-app/main/default/objects/Campaign/recordTypes/Email_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Email_Marketing</fullName>
    <active>true</active>
    <label>Email Marketing</label>
</RecordType>