force-app/main/default/objects/Campaign/recordTypes/Event_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Event_Marketing</fullName>
    <active>true</active>
    <label>Event Marketing</label>
</RecordType>