force-app/main/default/objects/Campaign/recordTypes/Product_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Product_Marketing</fullName>
    <active>true</active>
    <label>Product Marketing</label>
</RecordType>